--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "element-ui": "^2.12.0",
+    "element-ui": "^2.15.12",
     "file-saver": "^2.0.2",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.0.1-beta3",
+    "node-sass": "^8.0.0",
     "script-loader": "^0.7.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
